# mux-sweeper

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
include/: arguments.h  callbacks.h  encoder.h  engine.h  filename.h  gui_callbacks.h  microphone.h  params.h  record.h  screen.h  signals.h  system.h  system_utils.h
src/: arguments.c  callbacks.c  encoder.c  engine.c  filename.c  gui.c  gui_callbacks.c  guids.c  main.c  microphone.c  params.c  record.c  screen.c  signals.c  system.c  system_utils.c
test_suite/: pytest.ini  requirements.txt  test_main_runner.py
test_suite/core/: __init__.py  test_discovery.py  test_environment.py  test_execution.py  test_reporting.py
test_suite/helpers/: __init__.py  cleanup_helper.py  generate_test_audio.py
test_suite/tests/: __init__.py  test_essential_quality.py  test_gui_basic.py  test_prerequisites.py  test_unit.py
